# base-libs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  base.sln  base.vcxproj  base.vcxproj.filters
apps/image_viewer/: image_viewer.vcxproj  main.cpp
base/: base.vcxproj
base_test/: base_test.vcxproj
cmake/: FindCereal.cmake  FindSpdlog.cmake  FindWebP.cmake
image_viewer/: image_viewer.vcxproj  logging.cpp  main.cpp
include/base/: aligned_span.h  com.h  common.h  context.h  cpu_info.h  crypto.h  d2d_window.h  data_structures.hpp  debugging.h  debugoutput_logger_sink.h  dump_generator.h  encryption.h  error_codes.h  event.h  exception.h  file.h  fragmented_udp.h  generator.hpp  image_decoder.h  ini_parser.h  iterator.hpp  lock_guard.h  logging.h  memory_alignment.h  memory_mapped_io.h  message_box.h  message_notifier.h  mutex.h  named_semaphore.h  native_event_looper.h  network.h  porting.h  pragmas.h  preprocessor.h  process.h  random.h  random.hpp  registry.h  rw_spin_lock.h  security_attributes.h  (+8 more)
include/base/config/: ini.h  ini_parser.h
include/base/cpu_info/: gcc.h
include/base/error_codes/: stringify.h
include/base/error_codes/win32/: stringify.h
include/base/ext/: cuda_logging.h  cuda_res_guard.h  cuda_res_raii.h
include/base/ext/img_codecs/: common.h  decoder.h  encoder.h  types.h
include/base/ext/img_codecs/decoder/: jpeg.h  png.h  webp.h
include/base/ext/img_codecs/encoder/: jpeg.h  webp.h
include/base/ext/img_codecs/processing/: transform.h
include/base/logging/: base.h  common.h  exports.h  interface.h  macros.h  stringify.h  win32.h
include/base/logging/dispatcher/: dispatcher.h
include/base/logging/sinks/: file.h  stdout.h  win32_debugger.h
include/base/logging/win32/: utils.h
src/: aligned_span.cpp  com.cpp  cpu_info.cpp  crypto.cpp  d2d_window.cpp  debugoutput_logger_sink.cpp  dump_generator.cpp  encryption.cpp  event.cpp  exception.cpp  file.cpp  image_decoder.cpp  ini_praser.cpp  lib_jpeg_turbo_decoder.cpp  lib_png_decoder.cpp  logging.cpp  memory_alignment.cpp  memory_mapped_io.cpp  mutex.cpp  native_event_looper.cpp  network.cpp  process.cpp  registry.cpp  security_attributes.cpp  shared_memory.cpp  stack_trace.cpp  sync.cpp  text_file.cpp  thread.cpp  time.cpp  timer.cpp  utils.cpp
src/base/: com.cpp  crypto.cpp  d2d_window.cpp  debugoutput_logger_sink.cpp  dump_generator.cpp  encryption.cpp  event.cpp  exception.cpp  file.cpp  fragmented_udp.cpp  image_decoder.cpp  logging.cpp  memory_alignment.cpp  memory_mapped_io.cpp  mutex.cpp  named_semaphore.cpp  native_event_looper.cpp  network.cpp  process.cpp  random.cpp  registry.cpp  security_attributes.cpp  shared_memory.cpp  sync.cpp  thread.cpp  timer.cpp  utils.cpp
src/base/config/: ini_parser.cpp
src/base/error_codes/: stringify.cpp
src/base/error_codes/win32/: stringify.cpp
src/base/ext/: cuda_res_guard.cpp
src/base/ext/img_codecs/: decoder.cpp  encoder.cpp
src/base/ext/img_codecs/decoder/: jpeg.cpp  jpeg_intel_media_sdk.cpp  jpeg_turbo.cpp  nvjpeg.cpp  png.cpp  webp.cpp
src/base/ext/img_codecs/encoder/: jpeg.cpp  webp.cpp
src/base/ext/img_codecs/processing/: transform.cpp
src/base/logging/: base.cpp  interface.cpp  macros.cpp
src/base/logging/dispatcher/: dispatcher.cpp
src/base/logging/sinks/: file.cpp  interface.h  stdout.cpp  win32_debugger.cpp
src/base/logging/win32/: utils.cpp  utils.h
src/config/: ini.c  ini_parser.cpp
src/cpu_info/: gcc.cpp  msvc.cpp  msvc.h
src/ext/: cuda_res_raii.cpp
src/ext/img_codecs/: decoder.cpp
src/ext/img_codecs/decoder/: jpeg.cpp  png.cpp  webp_decoder.cpp
src/ext/img_codecs/encoder/: webp_encoder.cpp
src/logging/: win32.cpp
test/: CMakeLists.txt  iterator.cpp  logging.cpp  main.cpp  pch.h  test.cpp  test.vcxproj  test_intel_mfx_jpeg_decoding.cpp  test_random.cpp
vcproj/: base.vcxproj  base.vcxproj.filters  cuda_ext.vcxproj  debug.props  image_codecs.vcxproj  image_codecs.vcxproj.filters  intel_media_sdk.props  logging.vcxproj  logging.vcxproj.filters  nv_jpeg.props  release.props
vcproj/base/: base.vcxproj  base.vcxproj.filters
vcproj/dynamic/base/: base.vcxproj  base.vcxproj.filters
vcproj/dynamic/base/logging/: logging.vcxproj  logging.vcxproj.filters
vcproj/dynamic/ext/cuda/: cuda.vcxproj
vcproj/dynamic/ext/image_codecs/: image_codecs.vcxproj  image_codecs.vcxproj.filters
vcproj/fmt/: fmt.vcxproj  fmt.vcxproj.filters
vcproj/image_codecs/: image_codecs.vcxproj  image_codecs.vcxproj.filters
vcproj/logging/: logging.vcxproj  logging.vcxproj.filters
vcproj/static/base/: base.vcxproj  base.vcxproj.filters
vcproj/static/base/logging/: logging.vcxproj  logging.vcxproj.filters
vcproj/static/ext/image_codecs/: image_codecs.vcxproj  image_codecs.vcxproj.filters
